# atomix

./: .gitignore  CMakeLists.txt  README.md
include/: fileread.h  lexer.h  optflags.h  tokens.h  utils.h
src/: fileread.c  lexer.c  main.c  optflags.c  utils.c
test/: app.atx
